--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.12.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "body-parser": "^1.18.3"
   }
 }
