--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.3",
-    "request": "^2.88.2",
-    "body-parser": "^1.18.3"
+    "request": "^2.88.2"
   }
 }
